=== 1.2.5 / 2010-07-27

* Bug Fixes
  * Fix duplicated test name.  Noted by Peter Higgins.

=== 1.2.4 / 2010-07-26

* Bug Fixes
  * Actually have #request only finish a connection.  Somehow this got
    missed.

=== 1.2.3 / 2010-06-29

* Bug Fixes
  * Fix example code (pointed out by Alex Stahl)

=== 1.2.2 / 2010-06-22

* Bug Fixes
  * #request only finishes a connection instead of restarting it.  This helps
    prevents errors on non-idempotent HTTP requests after errors.
  * #connection_for handles EHOSTDOWN like #reset

=== 1.2.1 / 2010-05-25

* Bug Fixes
  * Don't alter Net::BufferedIO#rbuf_fill on 1.9+

=== 1.2 / 2010-05-20

* Minor Enhancements
  * Net::HTTP#read_timeout is now supported
  * Net::HTTP#open_timeout is now supported
  * Net::HTTP::Persistent#request now supports a block like Net::HTTP#request

=== 1.1 / 2010-05-18

* Minor Enhancements
  * Proxy support, see Net::HTTP::Persistent::new,
    Net::HTTP::Persistent#proxy_from_env
  * Added +name+ parameter to Net::HTTP::Persistent::new for separation of
    connection pools.
  * Added Net::HTTP::Persistent#shutdown so you can clean up after yourself
  * Net::HTTP::Persistent now suppresses "peer certificate won't be verified
    in this SSL session" warning.

* Bug Fixes
  * Net::HTTP::Persistent retries requests in accordance with RFC 2616.

=== 1.0.1 / 2010-05-05

* Minor Enhancements
  * Added #debug_output
  * Now uses Hoe minitest plugin
* Bug Fixes
  * Tests pass on 1.9

=== 1.0.0 / 2010-05-04

* Major Enhancements
  * Birthday!
